test/errors/scopes6.input.asm
* = $801

!let foo = 1
foo: lda #1  ; this shouldn't be ok
